# omnia

./: AGENTS.md  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE-MIT  Makefile.toml  README.md  RELEASES.md  clippy.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: copilot-instructions.md
crates/guest-macro/: Cargo.toml  README.md  example.rs
crates/guest-macro/src/: guest.rs  http.rs  lib.rs  messaging.rs
crates/omnia/: Cargo.toml  README.md
crates/omnia-sdk/: Cargo.toml  README.md
crates/omnia-sdk/src/: api.rs  capabilities.rs  error.rs  lib.rs
crates/omnia-sdk/src/api/: into_http.rs  reply.rs  request.rs
crates/omnia/src/: compile.rs  create.rs  lib.rs  traits.rs
crates/orm/: Cargo.toml  README.md
crates/orm/src/: delete.rs  entity.rs  filter.rs  insert.rs  join.rs  lib.rs  query.rs  select.rs  update.rs  usage.md
crates/orm/tests/: common.rs  entity.rs  filter.rs  orm.rs
crates/otel/: Cargo.toml  README.md
crates/otel/src/: init.rs  lib.rs  retry.rs  tracing.rs
crates/qwasr/: Cargo.toml
crates/qwasr-sdk/: Cargo.toml
crates/qwasr-sdk/src/: capabilities.rs
crates/qwasr/src/: compile.rs  create.rs
crates/runtime-macro/: Cargo.toml  README.md  example.rs
crates/runtime-macro/src/: expand.rs  generate.rs  lib.rs  runtime.rs
crates/warp/: Cargo.toml  README.md
crates/warp-sdk/: Cargo.toml
crates/warp-sdk/src/: api.rs  capabilities.rs  error.rs  lib.rs
crates/warp-sdk/src/api/: into_http.rs  request.rs
crates/warp/src/: compile.rs  create.rs  lib.rs  traits.rs
crates/wasi-blobstore/: Cargo.toml  README.md
crates/wasi-blobstore/src/: guest.rs  host.rs  lib.rs
crates/wasi-blobstore/src/host/: blobstore_impl.rs  container_impl.rs  default_impl.rs  resource.rs  types_impl.rs
crates/wasi-blobstore/wit/: world.wit
crates/wasi-config/: Cargo.toml  README.md
crates/wasi-config/src/: guest.rs  host.rs  lib.rs
crates/wasi-config/src/host/: default_impl.rs
crates/wasi-config/wit/: world.wit
crates/wasi-http/: Cargo.toml  README.md
crates/wasi-http/src/: host.rs  lib.rs
crates/wasi-http/src/guest/: cache.rs  incoming.rs  outgoing.rs
crates/wasi-http/src/host/: default_impl.rs  server.rs
crates/wasi-identity/: Cargo.toml  README.md
crates/wasi-identity/src/: guest.rs  host.rs  lib.rs
crates/wasi-identity/src/host/: credentials_impl.rs  default_impl.rs  resource.rs  types_impl.rs
crates/wasi-identity/wit/: world.wit
crates/wasi-keyvalue/: Cargo.toml  README.md
crates/wasi-keyvalue/src/: guest.rs  host.rs  lib.rs
crates/wasi-keyvalue/src/host/: atomics_impl.rs  default_impl.rs  resource.rs  store_impl.rs
crates/wasi-keyvalue/wit/: world.wit
crates/wasi-messaging/: Cargo.toml  README.md
crates/wasi-messaging/src/: guest.rs  host.rs  lib.rs
crates/wasi-messaging/src/host/: default_impl.rs  request_reply_impl.rs  resource.rs  server.rs  types_impl.rs
crates/wasi-messaging/wit/: world.wit
crates/wasi-otel/: Cargo.toml  README.md
crates/wasi-otel-attr/: Cargo.toml  README.md
crates/wasi-otel-attr/src/: lib.rs
crates/wasi-otel/src/: guest.rs  host.rs  lib.rs
crates/wasi-otel/src/guest/: convert.rs  metrics.rs
crates/wasi-otel/src/host/: default_impl.rs  metrics_impl.rs  resource_impl.rs  tracing_impl.rs  types_impl.rs
crates/wasi-otel/wit/: world.wit
crates/wasi-sql/: Cargo.toml  README.md
crates/wasi-sql/src/: guest.rs  host.rs  lib.rs
crates/wasi-sql/src/host/: default_impl.rs  readwrite_impl.rs  resource.rs  types_impl.rs
crates/wasi-sql/wit/: world.wit
crates/wasi-vault/: Cargo.toml  README.md
crates/wasi-vault/src/: guest.rs  host.rs  lib.rs
crates/wasi-vault/src/host/: default_impl.rs  resource.rs  vault_impl.rs
crates/wasi-vault/wit/: world.wit
crates/wasi-websocket/: Cargo.toml  README.md
crates/wasi-websocket/src/: guest.rs  host.rs  lib.rs
crates/wasi-websocket/src/host/: client_impl.rs  default_impl.rs  resource.rs  server.rs  types_impl.rs
crates/wasi-websocket/wit/: README.md  deps.toml  world.wit
crates/wasi-websockets/: Cargo.toml
crates/wasi-websockets/src/: guest.rs  host.rs
crates/wasi-websockets/src/host/: default_impl.rs  resource.rs  server.rs  store_impl.rs
docker/: README.md  otelcol.yaml
docs/: Architecture.md
examples/: Cargo.toml  README.md
examples/blobstore/: README.md  guest.rs  runtime.rs
examples/config/: README.md  guest.rs  runtime.rs
examples/http/: README.md  guest.rs  runtime.rs
examples/http-proxy/: README.md  guest.rs  runtime.rs
examples/identity/: .env.example  guest.rs  runtime.rs
examples/keyvalue/: README.md  guest.rs  runtime.rs
examples/messaging/: guest.rs  runtime.rs
examples/otel/: README.md  guest.rs  runtime.rs
examples/sql/: README.md  azurets.yaml  guest.rs  runtime.rs
examples/vault/: README.md  guest.rs  runtime.rs
examples/websocket/: README.md  guest.rs  runtime.rs
examples/websockets/: guest.rs  runtime.rs
supply-chain/: config.toml
