[workspace]
members = ["crates/*", "examples"]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
categories = ["runtime", "wasi", "wasm"]
edition = "2024"
homepage = "https://credibil.io"
keywords = ["decentralized", "identity"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/credibil/wrt"
rust-version = "1.92"
version = "0.23.0"

[workspace.lints.rust]
# https://dirname.github.io/rust-std-doc/rustc/lints/listing/allowed-by-default.html
# missing_docs = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
all = "warn"      # correctness, suspicious, style, complexity, perf
cargo = "warn"
nursery = "warn"
pedantic = "warn"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", default-features = false, features = ["json"] }
base64ct = { version = "1.8.2", features = ["std"] }
bytes = "1.11.0"
cfg-if = "1.0.4"
chrono = "0.4.42"
fromenv = "0.1.0"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = "0.1.19"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
parking_lot = "0.12.5"
proc-macro2 = "1.0.105"
quote = "1.0.43"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
syn = { version = "2.0.113", features = ["full"] }
time = "0.3.44"
tokio = { version = "1.49.0", default-features = false }
tower = "0.5.2"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
wasip3 = { version = "0.3.1", features = ["http-compat"] }
wasmtime = { version = "40.0.0", default-features = false, features = [
    "component-model-async",
    "parallel-compilation",
] }
wasmtime-wasi = { version = "40.0.0", features = ["p3"] }
wasmtime-wasi-config = "40.0.0"
wasmtime-wasi-http = { version = "40.0.0", features = ["p3"] }
wasmtime-wasi-io = "40.0.0"
wit-bindgen = { version = "0.50.0", features = ["async-spawn"] }

# interally referenced crates
guest-macro = { path = "crates/guest-macro", version = "0.23.0" }
runtime-macro = { path = "crates/runtime-macro", version = "0.23.0" }
warp = { path = "crates/warp", version = "0.23.0", registry = "credibil" }
warp-otel = { path = "crates/otel", version = "0.23.0" }
warp-sdk = { path = "crates/warp-sdk", version = "0.23.0", registry = "credibil" }
wasi-blobstore = { path = "crates/wasi-blobstore", version = "0.23.0", registry = "credibil" }
wasi-config = { path = "crates/wasi-config", version = "0.23.0", registry = "credibil" }
wasi-http = { path = "crates/wasi-http", version = "0.23.0", registry = "credibil" }
wasi-identity = { path = "crates/wasi-identity", version = "0.23.0", registry = "credibil" }
wasi-keyvalue = { path = "crates/wasi-keyvalue", version = "0.23.0", registry = "credibil" }
wasi-messaging = { path = "crates/wasi-messaging", version = "0.23.0", registry = "credibil" }
wasi-otel = { path = "crates/wasi-otel", version = "0.23.0", registry = "credibil" }
wasi-otel-attr = { path = "crates/wasi-otel-attr", version = "0.23.0", registry = "credibil" }
wasi-sql = { path = "crates/wasi-sql", version = "0.23.0", registry = "credibil" }
wasi-vault = { path = "crates/wasi-vault", version = "0.23.0", registry = "credibil" }
wasi-websockets = { path = "crates/wasi-websockets", version = "0.23.0", registry = "credibil" }

[patch.crates-io]
# wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-40.0.0" }

[profile.release]
lto = true
opt-level = "s"
strip = true

# [package.metadata.cargo-udeps.ignore]
# normal = ["openssl"]

# [package.metadata.cargo-machete]
# ignored = ["openssl"]
