[package]
name = "examples"
publish = false
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
qwasr-wasi-blobstore.workspace = true
qwasr-wasi-config.workspace = true
qwasr-wasi-http.workspace = true
qwasr-wasi-identity.workspace = true
qwasr-wasi-keyvalue.workspace = true
qwasr-wasi-messaging.workspace = true
qwasr-wasi-otel.workspace = true
qwasr-wasi-sql.workspace = true
qwasr-wasi-vault.workspace = true
qwasr-wasi-websocket.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
qwasr.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
axum = { workspace = true, features = ["macros"] }
base64ct.workspace = true
bytes.workspace = true
chrono.workspace = true
http.workspace = true
http-body-util.workspace = true
opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing.workspace = true
wasip3.workspace = true
wit-bindgen.workspace = true
qwasr-orm.workspace = true
qwasr-sdk.workspace = true
qwasr-wasi-otel-attr.workspace = true

[[example]]
name = "blobstore-wasm"
path = "blobstore/guest.rs"
crate-type = ["cdylib"]

[[example]]
name = "blobstore"
path = "blobstore/runtime.rs"

[[example]]
name = "config-wasm"
path = "config/guest.rs"
crate-type = ["cdylib"]

[[example]]
name = "config"
path = "config/runtime.rs"

[[example]]
name = "http-wasm"
path = "http/guest.rs"
crate-type = ["cdylib"]

[[example]]
name = "http"
path = "http/runtime.rs"

[[example]]
name = "http-proxy-wasm"
path = "http-proxy/guest.rs"
crate-type = ["cdylib"]

[[example]]
name = "http-proxy"
path = "http-proxy/runtime.rs"

[[example]]
name = "identity-wasm"
path = "identity/guest.rs"
crate-type = ["cdylib"]

[[example]]
name = "identity"
path = "identity/runtime.rs"

[[example]]
name = "keyvalue-wasm"
path = "keyvalue/guest.rs"
crate-type = ["cdylib"]

[[example]]
name = "keyvalue"
path = "keyvalue/runtime.rs"

[[example]]
name = "messaging-wasm"
path = "messaging/guest.rs"
crate-type = ["cdylib"]

[[example]]
name = "messaging"
path = "messaging/runtime.rs"

[[example]]
name = "otel-wasm"
path = "otel/guest.rs"
crate-type = ["cdylib"]

[[example]]
name = "otel"
path = "otel/runtime.rs"

[[example]]
name = "sql-wasm"
path = "sql/guest.rs"
crate-type = ["cdylib"]

[[example]]
name = "sql"
path = "sql/runtime.rs"

[[example]]
name = "vault-wasm"
path = "vault/guest.rs"
crate-type = ["cdylib"]

[[example]]
name = "vault"
path = "vault/runtime.rs"

[[example]]
name = "websocket-wasm"
path = "websocket/guest.rs"
crate-type = ["cdylib"]

[[example]]
name = "websocket"
path = "websocket/runtime.rs"
