[package]
name = "omnia-sdk"
description = "SDK for building WASI component guests with Omnia runtime support"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["json", "macros", "query"] }
bytes.workspace = true
http.workspace = true
http-body.workspace = true
omnia-wasi-sql.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.18"
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
omnia-guest-macro.workspace = true
omnia-wasi-config.workspace = true
omnia-wasi-http.workspace = true
omnia-wasi-identity.workspace = true
omnia-wasi-keyvalue.workspace = true
omnia-wasi-messaging.workspace = true
omnia-wasi-websocket.workspace = true
omnia-wasi-otel.workspace = true
wasip3.workspace = true
wit-bindgen.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
