[package]
name = "qwasr-orm"
description = "Object-relational mapping helper, suitable for use with qwasr-wasi-sql"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
anyhow.workspace = true
chrono.workspace = true
qwasr-wasi-sql.workspace = true
sea-query.workspace = true
serde_json.workspace = true
tracing.workspace = true
