[package]
name = "warp-otel"
description = "Opentelemetry integration for Warp"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
http.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
rand.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
