[package]
name = "qwasr-sdk"
description = "qwasr guest SDK"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["json", "macros", "query"] }
bytes.workspace = true
http.workspace = true
http-body.workspace = true
qwasr-wasi-sql.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.18"
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
qwasr-guest-macro.workspace = true
qwasr-wasi-config.workspace = true
qwasr-wasi-http.workspace = true
qwasr-wasi-identity.workspace = true
qwasr-wasi-keyvalue.workspace = true
qwasr-wasi-messaging.workspace = true
qwasr-wasi-otel.workspace = true
wasip3.workspace = true
wit-bindgen.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
