[package]
name = "runtime-macro"
description = "Procedural macros for runtime build code generation"
publish = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
