[package]
name = "warp-sdk"
description = "Warp guest SDK"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["json", "macros", "query"] }
bytes.workspace = true
fromenv.workspace = true
guest-macro.workspace = true
http.workspace = true
http-body.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.17"
tracing.workspace = true
wasi-http.workspace = true
wasi-identity.workspace = true
wasi-keyvalue.workspace = true
wasi-messaging.workspace = true
wasi-otel.workspace = true
wasip3.workspace = true
wit-bindgen.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
