[package]
name = "warp"
description = "Warp runtime"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = ["jit"]

# Enables just-in-time wasm to machine code compilation.
jit = ["wasmtime/cranelift"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
clap = { version = "4.5.54", features = ["derive"] }
futures.workspace = true
runtime-macro.workspace = true
serde.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["macros"] }
warp-otel.workspace = true
wasmtime = { workspace = true, features = ["runtime"] }
wasmtime-wasi.workspace = true
