[package]
name = "wasi-config"
description = "WASI Config WIT implementation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
tracing.workspace = true
wasmtime-wasi-config.workspace = true

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
warp.workspace = true
wasmtime = { workspace = true, features = ["component-model-async"] }

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen.workspace = true
