[package]
name = "wasi-http"
description = "WASI HTTP WIT implementation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
http.workspace = true
tracing.workspace = true

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = "0.13.1"
base64ct.workspace = true
fromenv.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
warp.workspace = true
tokio.workspace = true
wasmtime = { workspace = true, features = ["component-model-async"] }
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
axum.workspace = true
http-body.workspace = true
http-body-util.workspace = true
percent-encoding = "2.3.2"
rkyv = "0.8.13"
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
wasi-keyvalue.workspace = true
wasip3.workspace = true
