[package]
name = "omnia-wasi-http"
description = "WASI HTTP interface implementation for the Omnia runtime"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
http.workspace = true
tracing.workspace = true

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
base64ct.workspace = true
fromenv.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
reqwest = "0.13.2"
tokio.workspace = true
wasmtime = { workspace = true, features = ["component-model-async"] }
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true
omnia.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
axum.workspace = true
futures.workspace = true
http-body.workspace = true
http-body-util.workspace = true
percent-encoding = "2.3.2"
rkyv = "0.8.15"
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
wasip3.workspace = true
omnia-wasi-keyvalue.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.5"
