[package]
name = "wasi-identity"
description = "WASI Identity implementation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
fromenv.workspace = true
futures.workspace = true
oauth2 = "5.0.0"
warp.workspace = true
serde.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
