[package]
name = "qwasr-wasi-keyvalue"
description = "WASI Keyvalue implementation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

# dependencies shared across host and guest
[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures.workspace = true
qwasr.workspace = true
moka.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { workspace = true, features = ["serde"] }
serde_json.workspace = true
wit-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
