[package]
name = "wasi-messaging"
description = "WASI messaging WIT implementation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
futures.workspace = true
http.workspace = true
warp.workspace = true
serde.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
tokio-stream = { version = "0.1.17", features = ["sync"] }

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
