[package]
name = "wasi-otel"
description = "WASI Opentelemetry implementation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = ["metrics", "tracing"]
metrics = ["dep:tracing-opentelemetry", "dep:tracing-subscriber"]
tracing = ["dep:tracing-opentelemetry", "dep:tracing-subscriber"]

[dependencies]
anyhow.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = [
    "experimental_metrics_custom_reader",
] }
tracing.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures.workspace = true
hex = "0.4.3"
opentelemetry-proto = "0.31.0"
prost = "0.14.1"
warp.workspace = true
warp-otel.workspace = true
wasmtime.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
cfg-if.workspace = true
num-traits = "0.2.19"
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
wasi-otel-attr.workspace = true
wit-bindgen.workspace = true
