[package]
name = "wasi-sql"
description = "WASI SQL implementation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fromenv.workspace = true
futures.workspace = true
warp.workspace = true
parking_lot.workspace = true
rusqlite = { version = "0.38.0", features = ["bundled"] }
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

# shared dependencies
[dependencies]
anyhow.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
base64ct.workspace = true
serde_json.workspace = true
wit-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
