[package]
name = "wasi-websockets"
description = "WASI WebSockets WIT implementation"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]

# host dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
futures.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["server"] }
hyper-util.workspace = true
warp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-tungstenite = "0.28.0"
tracing.workspace = true
tungstenite = "0.28.0"
wasmtime.workspace = true
wasmtime-wasi.workspace = true

# guest dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen.workspace = true
